--- a/task-manager/config/dev.env
+++ b/task-manager/config/dev.env
@@ -1,4 +1,4 @@
 PORT=3000
-SENDGRID_API_KEY=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
-MONGODB_URL=mongodb+srv://task-test:task-test@cluster0.ul0cz.mongodb.net/task-test?authSource=admin&replicaSet=atlas-qz9s66-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
+SENDGRID_API_KEY=sendgid_api_key
+MONGODB_URL=mongodb://127.0.0.1:27017/task-manager-api
 JWT_SECRET=thisisasecretformyapp
